Uploaded image for project: 'Traffic Server'
  1. Traffic Server
  2. TS-1780

UnixEventProcessor fails compile on Debuntu (with hardening flags)

    XMLWordPrintableJSON

Details

    • Bug
    • Status: Closed
    • Major
    • Resolution: Fixed
    • None
    • 3.3.2
    • Build
    • None

    Description

        CXX    UnixEventProcessor.o
      UnixEventProcessor.cc: In member function ‘virtual int EventProcessor::start(int)’:
      UnixEventProcessor.cc:204:7: error: format not a string literal and no format arguments [-Werror=format-security]
      cc1plus: all warnings being treated as errors
      

      Attachments

        Activity

          People

            i.galic Igor Galić
            i.galic Igor Galić
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved: