[TS-1780] Fix Debuntu build with hardening flags